src/objects/Listing__c.object
<CustomObject>
    <fields>
        <fullName>Acquisition_Type__c</fullName>
        <label>Acquisition Type</label>
        <picklist>
            <picklistValues>
                <fullName>Core/Stabilized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distressed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single-Tenant, Net-Leased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Add</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Activity_ID__c</fullName>
        <label>Activity ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Property__r.Property_Address__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amortization_Years__c</fullName>
        <label>Amortization (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asking_Price_Actual__c</fullName>
        <label>Asking Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asking_Price__c</fullName>
        <label>system.askingprice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assumable_Financing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assumable Financing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker_Net_Commission__c</fullName>
        <inlineHelpText>What do you net?</inlineHelpText>
        <label>Broker Net Commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAP_Rate__c</fullName>
        <label>CAP Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Property__r.City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_1__c</fullName>
        <formula>Commission__c  *   Asking_Price_Actual__c</formula>
        <label>system.commission.formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Actual__c</fullName>
        <description>Auto-calculated</description>
        <formula>Asking_Price_Actual__c  *  Commission__c</formula>
        <label>system.commission ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Factor__c</fullName>
        <formula>Commission__c  *  Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Input__c</fullName>
        <inlineHelpText>Please estimate for pipeline tracking purposes</inlineHelpText>
        <label>Commission ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission (%)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_Off_Market__c</fullName>
        <label>Date Off-Market</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_On_Market__c</fullName>
        <label>Date On Market</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_On_Market__c</fullName>
        <formula>IF( ISBLANK(Date_Off_Market__c )  = FALSE  ,  Date_Off_Market__c  -   Date_On_Market__c  , TODAY() -  Date_On_Market__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days On Market</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executed__c</fullName>
        <formula>if(ispickval(Status__c, &quot;Closed&quot;), TRUE,if(ispickval(Status__c, &quot;In Contract&quot; ),TRUE, FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Listing_Ad_Source__c</fullName>
        <label>Listing Ad Source</label>
        <picklist>
            <picklistValues>
                <fullName>Costar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loopnet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Listing_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Performance__c</fullName>
        <label>Loan Performance</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Performing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Performing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Loan Type</label>
        <picklist>
            <picklistValues>
                <fullName>All Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assumption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loopnet_ID__c</fullName>
        <label>Loopnet Listing ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>AK-Anchorage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Birmingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Huntsville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Montgomery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR-Fayetteville/Springdale/Rogers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR-Fort Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR-Little Rock/N Little Rock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ-Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ-Tucson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Bakersfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-East Bay/Oakland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Fresno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Inland Empire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Marin/Sonoma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Orange County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Salinas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-San Luis Obispo/Paso Robles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Santa Barbara/Sta Maria/Goleta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Santa Cruz/Watsonville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-South Bay/San Jose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Stockton/Modesto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Visalia/Porterville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-Colorado Springs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT-Hartford</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Lease_Rate_SF__c</fullName>
        <label>Maximum Lease Rate ($/SF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Purchase_Price__c</fullName>
        <label>Maximum Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Square_Footage__c</fullName>
        <label>Maximum Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_CAP_Rate__c</fullName>
        <label>Minimum CAP Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_Cash_on_cash__c</fullName>
        <label>Minimum Cash-on-cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_IRR__c</fullName>
        <label>Minimum IRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_LIRR__c</fullName>
        <label>Minimum LIRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_Lease_Rate_SF__c</fullName>
        <label>Minimum Lease Rate ($/SF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Purchase_Price__c</fullName>
        <label>Minimum Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Square_Footage__c</fullName>
        <label>Minimum Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NOI__c</fullName>
        <label>NOI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Need_Date__c</fullName>
        <label>Need Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Offers__c</fullName>
        <inlineHelpText>How many offer have been received on this listing? (Excludes Draft Offers)</inlineHelpText>
        <label>Dead</label>
        <summaryFilterItems>
            <field>Offer__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Draft</value>
        </summaryFilterItems>
        <summaryForeignKey>Offer__c.Listing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSF_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Company__c</fullName>
        <formula>Owner_Contact__r.Account.Name</formula>
        <label>system.client company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Listings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Room__c</fullName>
        <formula>Asking_Price__c  /  Property__r.Rooms__c</formula>
        <label>Price/Room</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_SF__c</fullName>
        <formula>Asking_Price_Actual__c   /  Property_SF__c</formula>
        <label>Price/SF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Unit__c</fullName>
        <formula>Asking_Price_Actual__c  /  Property__r.Units__c</formula>
        <label>Price/Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Balance__c</fullName>
        <label>Principal Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <defaultValue>0.40</defaultValue>
        <inlineHelpText>What is the probability of this assignment closing?</inlineHelpText>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multifamily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Investment Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Listing Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing / Equity / Debt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_SF__c</fullName>
        <formula>Property__r.Square_Footage__c</formula>
        <label>Property SF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Type1__c</fullName>
        <formula>Property__r.PropertyType__c</formula>
        <label>Property Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <formula>TEXT( Property__r.Primary_Use__c )</formula>
        <label>Primary Use</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Listings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added for the third project requirement.</description>
        <label>Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipName>Listings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rep_Agreement_Executed__c</fullName>
        <label>Rep Agreement Executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Image__c</fullName>
        <formula>Property__r.Report_Image__c</formula>
        <label>Report Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Space_Sub_type__c</fullName>
        <label>Space Sub-type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Flex Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Office Showroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Truck Terminal/Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Distribution Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Refrigerated/Cold Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Multifamily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Commercial(Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office- Creative/Loft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office- Office Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office- Governmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office- Medical Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office- R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Freestanding Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Retail (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Vehicle Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Pad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Anchor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Community Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Strip Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Specialty Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Neighborhood Center</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Space_Type__c</fullName>
        <label>Space Type</label>
        <picklist>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(Property__r.State__c)</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Marketing Preparation</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On-Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submarket__c</fullName>
        <label>Submarket</label>
        <picklist>
            <picklistValues>
                <fullName>Downtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uptown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southtown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>System_Commis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System_Commis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tenancy__c</fullName>
        <formula>TEXT( Property__r.Tenancy__c )</formula>
        <label>Tenancy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Years__c</fullName>
        <label>Term (Years)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Return__c</fullName>
        <label>Total Return</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <formula>Property__r.Year_Built__c</formula>
        <label>Year Built</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yield__c</fullName>
        <label>Yield (Cash-On-Cash)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Offers__c</fullName>
        <inlineHelpText>How many offer have been received on this listing? (Excludes Draft Offers)</inlineHelpText>
        <label># of Offers</label>
        <summaryFilterItems>
            <field>Offer__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Draft</value>
        </summaryFilterItems>
        <summaryForeignKey>Offer__c.Listing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rcm1id__c</fullName>
        <description>External ID from rcm1 system</description>
        <externalId>true</externalId>
        <label>rcm1id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Listing</label>
    <listViews>
        <fullName>Off_Market</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Owner_Company__c</columns>
        <columns>Owner_Contact__c</columns>
        <columns>Asking_Price_Actual__c</columns>
        <columns>CAP_Rate__c</columns>
        <columns>Price_Room__c</columns>
        <columns>Price_SF__c</columns>
        <columns>Price_Unit__c</columns>
        <columns>Days_On_Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Off-Market</value>
        </filters>
        <label>Off-Market</label>
    </listViews>
    <listViews>
        <fullName>On_Market</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Owner_Company__c</columns>
        <columns>Owner_Contact__c</columns>
        <columns>Asking_Price_Actual__c</columns>
        <columns>CAP_Rate__c</columns>
        <columns>Price_Room__c</columns>
        <columns>Price_SF__c</columns>
        <columns>Price_Unit__c</columns>
        <columns>Days_On_Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On-Market</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Listing__c.Internal_Listing</value>
        </filters>
        <label>On-Market (Internal)</label>
    </listViews>
    <listViews>
        <fullName>On_Market_Listings</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Owner_Company__c</columns>
        <columns>Owner_Contact__c</columns>
        <columns>Asking_Price_Actual__c</columns>
        <columns>CAP_Rate__c</columns>
        <columns>Price_SF__c</columns>
        <columns>Price_Room__c</columns>
        <columns>Price_Unit__c</columns>
        <columns>Days_On_Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On-Market</value>
        </filters>
        <label>On-Market (All)</label>
    </listViews>
    <nameField>
        <label>Listing Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IE00000004fWQMAY_00NE0000001twGPMAY</fullName>
        <active>true</active>
        <field>Spaces__c.Landlord_Representation_Assignment__c</field>
        <filterItems>
            <field>Listing__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Landlord Representation</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Space_Landlord Representation Assignment</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000005Sd2MAE_00NE0000001twHSMAY</fullName>
        <active>true</active>
        <field>Spaces_Shown__c.Assignment__c</field>
        <filterItems>
            <field>Listing__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tenant Representation, Landlord Representation</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Space Shown_Assignment</name>
    </namedFilters>
    <pluralLabel>Listings</pluralLabel>
    <recordTypes>
        <fullName>Buyer_Representation</fullName>
        <active>true</active>
        <description>Do you represent a buyer?</description>
        <label>Buyer Representation</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Listing</fullName>
        <active>true</active>
        <description>Do you want to track your competitors&apos; seller representation assignments?</description>
        <label>Seller Representation (External)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Listing</fullName>
        <active>true</active>
        <description>Do you represent a seller?</description>
        <label>Seller Representation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Landlord_Representation</fullName>
        <active>true</active>
        <description>Do you represent a landlord?</description>
        <label>Landlord Representation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tenant_Representation</fullName>
        <active>true</active>
        <description>Do you represent a tenant?</description>
        <label>Tenant Representation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>